--- a/managementSystem/templates/orders/orders.html
+++ b/managementSystem/templates/orders/orders.html
@@ -3,6 +3,203 @@
 
 {% block content %}
     <div class="main-wrapper">
+        <div class="page-wrapper">
+            <div class="content content-two">
 
+                <!-- Breadcrumb -->
+                <div class="mb-4 d-flex align-items-center flex-wrap gap-2 justify-content-between">
+                    <div>
+                        <h4 class="mb-1 fw-bold">Purchase Order</h4>
+                        <nav>
+                            <ol class="breadcrumb breadcrumb-dot mb-0">
+                                <li class="breadcrumb-item">
+                                    <a href="{% url 'dashboard' %}">Home</a>
+                                </li>
+                                <li class="breadcrumb-item active" aria-current="page">Purchase Order</li>
+                            </ol>
+                        </nav>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <a href="{% url 'managementSystem:create_order' %}" class="btn btn-md btn-primary"><i class="ti ti-plus me-1"></i>Add New Purchase Order</a>
+                    </div>
+                </div>
+                <!-- /Breadcrumb -->
+
+                <div class="row">
+                    <div class="col-xl-3 col-md-6 d-flex">
+                        <div class="card flex-fill shadow-none">
+                            <div class="card-body">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div class="d-flex align-items-center">
+                                        <div class="avatar avatar-xl bg-violet rounded-1 me-2 flex-shrink-0">
+                                            <i class="ti ti-user-star text-white fs-24 fw-normal"></i>
+                                        </div>
+                                        <div>
+                                            <span class="fs-13 text-nowrap">Total Purchase Order</span>
+                                            <h2>{{total_orders}}</h2>
+                                        </div>
+                                    </div>
+                                    <div class="text-end">
+                                        <span class="country-chart-2" data-width="100%">0,1,0,1,0,3,1</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6 d-flex">
+                        <div class="card flex-fill shadow-none">
+                            <div class="card-body">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div class="d-flex align-items-center">
+                                        <div class="avatar avatar-xl bg-secondary rounded-1 me-2 flex-shrink-0">
+                                            <i class="ti ti-user-bolt text-white fs-24 fw-normal"></i>
+                                        </div>
+                                        <div>
+                                            <span class="fs-13 text-nowrap">Completed</span>
+                                            <h2>{{completed_orders}}</h2>
+                                        </div>
+                                    </div>
+                                    <div class="text-end">
+                                        <span class="country-chart-1" data-width="100%">0,3,0,2,1,3,1</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6 d-flex">
+                        <div class="card flex-fill shadow-none">
+                            <div class="card-body">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div class="d-flex align-items-center">
+                                        <div class="avatar avatar-xl bg-primary rounded-1 me-2 flex-shrink-0">
+                                            <i class="ti ti-user-x text-white fs-24 fw-normal"></i>
+                                        </div>
+                                        <div>
+                                            <span class="fs-13 text-nowrap">InProgress</span>
+                                            <h2>{{inprogress_orders}}</h2>
+                                        </div>
+                                    </div>
+                                    <div class="text-end">
+                                        <span class="country-chart-3" data-width="100%">0,3,0,2,1,3,1</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6 d-flex">
+                        <div class="card flex-fill shadow-none">
+                            <div class="card-body">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div class="d-flex align-items-center">
+                                        <div class="avatar avatar-xl bg-pink rounded-1 me-2 flex-shrink-0">
+                                            <i class="ti ti-user-share text-white fs-24 fw-normal"></i>
+                                        </div>
+                                        <div>
+                                            <span class="fs-13 text-nowrap">Pending</span>
+                                            <h2>{{pending_orders}}</h2>
+                                        </div>
+                                    </div>
+                                    <div class="text-end">
+                                        <span class="country-chart-4" data-width="100%">0,3,0,2,1,3,1</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <ul class="nav nav-tabs tab-style-project d-inline-flex d-block" role="tablist">
+                </ul>
+
+                <!-- Search -->
+                <div class="d-flex align-items-center justify-content-between flex-wrap gap-3 table-header mb-3">
+                    
+                </div>
+                <!-- /Search -->
+
+                <!-- Table List -->
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead class="thead-light text-uppercase">
+                            <tr>
+                                <th class="no-sort">Purchase Order Code</th>
+                                <th class="no-sort">Company</th>
+                                <th class="no-sort">Date</th>
+                                <th class="no-sort">Due date</th>
+                                <th class="no-sort">Status</th>
+                                <th class="no-sort"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {%for order in orders%}
+                            <tr>
+                                <td><a href="{% url 'managementSystem:view_po' order.id %}" class="text-primary">{{order.po_number}}</a></td>
+                                <td>{{order.client}}</td>
+                                <td> {{order.date}} </td>
+                                <td> {{order.due_date}} </td>
+                                <td> {{order.status}} </td>
+                                <td>
+                                    <a class="action-set dot-settings" href="javascript:void(0);" data-bs-toggle="dropdown" aria-expanded="true">
+                                        <i class="ti ti-dots-vertical" aria-hidden="true"></i>
+                                    </a>
+                                    <ul class="dropdown-menu p-2 rounded-2">
+                                        <li>
+                                            <a href="{% url 'managementSystem:view_po' order.id %}" class="dropdown-item rounded-2"><i class="ti ti-eye me-2 text-gray-5"></i>View Details</a>
+                                        </li>
+                                        <li>
+                                            <a href="edit-project.html" class="dropdown-item rounded-2"><i class="ti ti-edit me-2 text-gray-5"></i>Edit Project</a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:void(0);" class="dropdown-item rounded-2"><i class="ti ti-copy me-2 text-gray-5"></i>Clone Project</a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:void(0);" class="dropdown-item rounded-2"><i class="ti ti-archive me-2 text-gray-5"></i>Archive Project</a>
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            {% empty %}
+                            <tr>
+                                 <td colspan="6" class="text-center">No Purchase order yet</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /Table List -->
+            </div>
+        </div>
     </div>
+
+    <!-- jQuery -->
+    <script src="{% static 'js/jquery-3.7.1.min.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+
+    <!-- Bootstrap Core JS -->
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+
+    <!-- Slimscroll JS -->
+    <script src="{% static 'js/jquery.slimscroll.min.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+
+    <!-- Datatable JS -->
+    <script src="{% static 'js/jquery.dataTables.min.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+    <script src="assets/js/dataTables.bootstrap5.min.js" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+
+    <!-- Select2 JS -->
+    <script src="{% static 'plugins/select2/js/select2.min.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+
+    <!-- Chart JS -->
+    <script src="{% static 'plugins/peity/jquery.peity.min.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+    <script src="{% static 'plugins/peity/chart-data.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+
+    <!-- Daterangepikcer JS -->
+    <script src="{% static 'js/moment.min.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+    <script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+
+    <!-- Datetimepicker JS -->
+    <script src="{% static 'js/bootstrap-datetimepicker.min.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+
+    <!-- Custom JS -->
+    <script src="{% static 'js/script.js' %}" type="a9f3c08bf8988559a66fb1f1-text/javascript"></script>
+
+<script src="{% static 'cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min-2.js' %}" data-cf-settings="a9f3c08bf8988559a66fb1f1-|49" defer=""></script>
 {% endblock %}
