--- a/managementSystem/templates/register_client.html
+++ b/managementSystem/templates/register_client.html
@@ -13,7 +13,7 @@
                         <nav>
                             <ol class="breadcrumb breadcrumb-dot mb-0">
                                 <li class="breadcrumb-item">
-                                    <a href="index.html">Home</a>
+                                    <a href="{% url 'dashboard'%}">Home</a>
                                 </li>
                                 <li class="breadcrumb-item active" aria-current="page">Clients</li>
                             </ol>
